tests/lean/phashmap_inst_coherence.lean.expected.out
phashmap_inst_coherence.lean:12:6: error: application type mismatch
  PersistentHashMap.find? m
argument
  m
has type
  PersistentHashMap Nat Nat
but is expected to have type
  PersistentHashMap Nat Nat
failed to synthesize instance
  CoeT (PersistentHashMap Nat Nat) m (PersistentHashMap Nat Nat)
phashmap_inst_coherence.lean:12:0: error: application type mismatch
  Lean.runEval fun («_» : Unit) => sorryAx ?m
argument
  fun («_» : Unit) => sorryAx ?m
has type
  Unit → ?m
but is expected to have type
  Unit → ?m
